--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
+  go_router: ^14.2.7
+  shared_preferences: ^2.3.2
+  audioplayers: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +49,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,10 +62,27 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/textures/wood_grain.jpg
+    - assets/textures/wood_grain.png
+    - assets/textures/wood_gain.jpg
+    - assets/textures/brushed_metal.png
+    - assets/textures/fabric_grille.png
+    - assets/textures/dust.png
+    - assets/textures/noise.png
+    - assets/audio/power_on.wav
+    - assets/audio/power_off.wav
+    - assets/audio/tune_tick.wav
+    - assets/images/frequency_theater_bg.png
+    - assets/icon/app_icon.png
+
+  fonts:
+    - family: ChosunCentennial
+      fonts:
+        - asset: assets/fonts/ChosunCentennial_otf.otf
+    - family: Hakgyoansim
+      fonts:
+        - asset: assets/fonts/Hakgyoansim Allimjang OTF R.otf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -87,3 +109,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/icon/app_icon.png
