--- a/frontend/ios/Runner/Info.plist
+++ b/frontend/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+		<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>madcamp2</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>madcamp2</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
