chore: change anomation

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -80,6 +80,8 @@ flutter:
     - assets/audio/power_on.wav
     - assets/audio/power_off.wav
     - assets/audio/tune_tick.wav
+    - assets/audio/radio_click.wav
+    - assets/audio/receive_sparkle.wav
     - assets/images/frequency_theater_bg.png
     - assets/icon/app_icon.png
     - .env
