--- a/frontend/android/local.properties
+++ b/frontend/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\limuj\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=/Users/junyeop_lee/Library/Android/sdk
+flutter.sdk=/opt/homebrew/share/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
