--- a/frontend/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/frontend/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\limuj\Desktop\madcamp\week2\MADCAMP_WK2\frontend
+FLUTTER_ROOT=/opt/homebrew/share/flutter
+FLUTTER_APPLICATION_PATH=/Users/junyeop_lee/Desktop/MadCamp/madcamp_2/frontend
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
